# OPP

Lab1/: CMakeLists.txt  main.cpp  main_var1.cpp  main_var2.cpp
Lab2/: CMakeLists.txt  main.cpp  mainOpenMP1.cpp  mainOpenMP2.cpp
Lab3/: CMakeLists.txt  main.cpp  mainNoParallel.cpp  smartParall.cpp
Lab4/: CMakeLists.txt  main.cpp
Lab5(Tasks)/: CMakeLists.txt  main.cpp
